--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@forge/ui": "^0.3.1",
-    "@forge/ui-jira": "^0.1.0"
+    "@forge/ui-jira": "^0.1.0",
+    "shortid": "^2.2.15"
   }
 }
