Update project name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "forge-ui-starter",
+  "name": "forge-jira-checklist",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
